--- a/philo/Makefile
+++ b/philo/Makefile
@@ -6,7 +6,7 @@
 #    By: hyospark <hyospark@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/08/18 00:20:00 by hyospark          #+#    #+#              #
-#    Updated: 2021/09/08 20:56:48 by hyospark         ###   ########.fr        #
+#    Updated: 2021/09/13 17:46:10 by hyospark         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -18,6 +18,8 @@ SOURCE = philo.c \
 		log.c \
 		utils.c \
 		life_loop.c \
+		mutex_fork.c \
+		action.c \
 
 LIB = -lpthread
 OUT = philo
