--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,19 @@
 		"chrono": "c",
 		"ios": "c",
 		"ratio": "c",
-		"locale": "c"
+		"locale": "c",
+		"__hash_table": "c",
+		"__split_buffer": "c",
+		"array": "c",
+		"deque": "c",
+		"initializer_list": "c",
+		"iterator": "c",
+		"string": "c",
+		"string_view": "c",
+		"unordered_map": "c",
+		"vector": "c",
+		"bit": "c",
+		"cmath": "c",
+		"stdio.h": "c"
 	},
 }
