refactor mandatory struc

--- a/philo/Makefile
+++ b/philo/Makefile
@@ -6,7 +6,7 @@
 #    By: hyospark <hyospark@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/08/18 00:20:00 by hyospark          #+#    #+#              #
-#    Updated: 2021/10/01 14:15:37 by hyospark         ###   ########.fr        #
+#    Updated: 2021/10/12 18:42:56 by hyospark         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -17,28 +17,39 @@ SOURCE = philo.c \
 		log.c \
 		utils.c \
 		life_loop.c \
-		life_loop_count.c \
-		mutex_fork.c \
 		action.c \
 		cal.c \
-		mutex.c \
-		check_starved.c
-
+		mutex.c
 LIB = -lpthread
 OUT = philo
 OBJECT = $(SOURCE:.c=.o)
+B_SOURCE = bonus/philo_bonus.c \
+		bonus/set_life_bonus.c \
+		bonus/log_bonus.c \
+		bonus/utils_bonus.c \
+		bonus/life_loop_bonus.c \
+		bonus/life_loop_count_bonus.c \
+		bonus/mutex_fork_bonus.c \
+		bonus/sema_bonus.c \
+		bonus/action_bonus.c \
+		bonus/cal_bonus.c \
+		bonus/check_starved_bonus.c
+B_OBJECT = $(B_SOURCE:.c=.o)
+B_OUT = philo_bonus
 
 .c.o:
 	gcc ${FLAGS} -c $< -o ${<:.c=.o}
 $(NAME): $(OBJECT)
 	gcc ${FLAGS} $(LIB) $(OBJECT) -o $(OUT)
-
 all : $(NAME)
+bonus : $(B_OBJECT)
+	gcc ${FLAGS} $(LIB) $(B_OBJECT) -o $(B_OUT)
 clean:
 	@rm -f $(OBJECT)
+	@rm -f $(B_OBJECT)
 fclean: clean
-	@rm -f $(NAME)
 	@rm -f $(OUT)
+	@rm -f $(B_OUT)
 re:	fclean all
 
-.PHONY: all clean fclean re
+.PHONY: all clean fclean re bonus
