--- a/philo_bonus/Makefile
+++ b/philo_bonus/Makefile
@@ -6,21 +6,21 @@
 #    By: hyospark <hyospark@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/08/18 00:20:00 by hyospark          #+#    #+#              #
-#    Updated: 2021/10/14 19:15:32 by hyospark         ###   ########.fr        #
+#    Updated: 2021/10/14 19:12:43 by hyospark         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME = philo
+NAME = philo_bonus
 FLAGS = -Wall -Wextra -Werror
-SOURCE = philo.c \
-		set_life.c \
-		log.c \
-		utils.c \
-		life_loop.c \
-		action.c \
-		mutex.c
+SOURCE = philo_bonus.c \
+		set_life_bonus.c \
+		log_bonus.c \
+		utils_bonus.c \
+		life_loop_bonus.c \
+		sema_bonus.c \
+		action_bonus.c
 LIB = -lpthread
-OUT = philo
+OUT = philo_bonus
 OBJECT = $(SOURCE:.c=.o)
 
 .c.o:
